# symbolic-calc

./: CMakeLists.txt  LICENSE  README.md
driver/: CMakeLists.txt
driver/inc/: calc_opts_parse.h
inc/: calc.h  calc_opts_parse.h  lexer.h  standard.h  variables.h  yacc_calc_support.h
inc-private/: calc_opts_parse.h  standard.h
lex/: lex.l
rules/: lexer.l
src/: calc.c  calc_opts_parse.c  lexer.c  main.c  standard.c
tests/: CMakeLists.txt
tests/src/: evaluation.cpp  prioritization.cpp  variables.cpp
yacc/: yacc.y
